--
-- PostgreSQL database dump
--

\restrict th2gdlSiYf2ADkmFXSXeK3COeaiz3L04aBNzMCOTRdz3fidDHDQV09hle7QXgfx

-- Dumped from database version 18.1 (Debian 18.1-1.pgdg12+2)
-- Dumped by pg_dump version 18.1 (Debian 18.1-1.pgdg13+2)

SET statement_timeout = 0;
SET lock_timeout = 0;
SET idle_in_transaction_session_timeout = 0;
SET transaction_timeout = 0;
SET client_encoding = 'UTF8';
SET standard_conforming_strings = on;
SELECT pg_catalog.set_config('search_path', '', false);
SET check_function_bodies = false;
SET xmloption = content;
SET client_min_messages = warning;
SET row_security = off;

--
-- Name: public; Type: SCHEMA; Schema: -; Owner: prd_barber_db_user
--

-- *not* creating schema, since initdb creates it


ALTER SCHEMA public OWNER TO prd_barber_db_user;

SET default_tablespace = '';

SET default_table_access_method = heap;

--
-- Name: Agendamento; Type: TABLE; Schema: public; Owner: prd_barber_db_user
--

CREATE TABLE public."Agendamento" (
    "Id" integer NOT NULL,
    "ClienteId" integer NOT NULL,
    "BarbeiroId" integer NOT NULL,
    "DataHora" timestamp with time zone NOT NULL,
    "Status" integer DEFAULT 1 NOT NULL,
    "DataRegistro" timestamp with time zone DEFAULT CURRENT_TIMESTAMP NOT NULL,
    "Observacao" character varying(255)
);


ALTER TABLE public."Agendamento" OWNER TO prd_barber_db_user;

--
-- Name: AgendamentoServicos; Type: TABLE; Schema: public; Owner: prd_barber_db_user
--

CREATE TABLE public."AgendamentoServicos" (
    "AgendamentoId" integer NOT NULL,
    "ServicoId" integer NOT NULL,
    "Observacao" text
);


ALTER TABLE public."AgendamentoServicos" OWNER TO prd_barber_db_user;

--
-- Name: Agendamento_Id_seq; Type: SEQUENCE; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE public."Agendamento" ALTER COLUMN "Id" ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public."Agendamento_Id_seq"
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: Barbeiro; Type: TABLE; Schema: public; Owner: prd_barber_db_user
--

CREATE TABLE public."Barbeiro" (
    "Id" integer NOT NULL,
    "Nome" character varying(150),
    "Telefone" character varying(15) NOT NULL,
    "UsuarioId" integer
);


ALTER TABLE public."Barbeiro" OWNER TO prd_barber_db_user;

--
-- Name: Barbeiro_Id_seq; Type: SEQUENCE; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE public."Barbeiro" ALTER COLUMN "Id" ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public."Barbeiro_Id_seq"
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: Cliente; Type: TABLE; Schema: public; Owner: prd_barber_db_user
--

CREATE TABLE public."Cliente" (
    "Id" integer NOT NULL,
    "Nome" character varying(150) NOT NULL,
    "Cpf" character varying(15) NOT NULL,
    "Telefone" character varying(15) NOT NULL,
    "DataCadastro" timestamp with time zone DEFAULT CURRENT_TIMESTAMP NOT NULL
);


ALTER TABLE public."Cliente" OWNER TO prd_barber_db_user;

--
-- Name: Cliente_Id_seq; Type: SEQUENCE; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE public."Cliente" ALTER COLUMN "Id" ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public."Cliente_Id_seq"
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: RefreshTokens; Type: TABLE; Schema: public; Owner: prd_barber_db_user
--

CREATE TABLE public."RefreshTokens" (
    "Id" integer NOT NULL,
    "UsuarioId" integer NOT NULL,
    "TokenHash" text NOT NULL,
    "ExpiraEm" timestamp with time zone NOT NULL,
    "Revogado" boolean NOT NULL,
    "CriadoEm" timestamp with time zone NOT NULL
);


ALTER TABLE public."RefreshTokens" OWNER TO prd_barber_db_user;

--
-- Name: RefreshTokens_Id_seq; Type: SEQUENCE; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE public."RefreshTokens" ALTER COLUMN "Id" ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public."RefreshTokens_Id_seq"
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: Servico; Type: TABLE; Schema: public; Owner: prd_barber_db_user
--

CREATE TABLE public."Servico" (
    "Id" integer NOT NULL,
    "NomeServico" character varying(100) NOT NULL,
    "Preco" numeric(10,2) NOT NULL
);


ALTER TABLE public."Servico" OWNER TO prd_barber_db_user;

--
-- Name: Servico_Id_seq; Type: SEQUENCE; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE public."Servico" ALTER COLUMN "Id" ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public."Servico_Id_seq"
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: Usuarios; Type: TABLE; Schema: public; Owner: prd_barber_db_user
--

CREATE TABLE public."Usuarios" (
    "Id" integer NOT NULL,
    "NomeUsuario" text NOT NULL,
    "SenhaHash" text NOT NULL,
    "NomeCompleto" text NOT NULL,
    "Cargo" text NOT NULL,
    "Role" text NOT NULL,
    "Ativo" boolean NOT NULL
);


ALTER TABLE public."Usuarios" OWNER TO prd_barber_db_user;

--
-- Name: Usuarios_Id_seq; Type: SEQUENCE; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE public."Usuarios" ALTER COLUMN "Id" ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public."Usuarios_Id_seq"
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: __EFMigrationsHistory; Type: TABLE; Schema: public; Owner: prd_barber_db_user
--

CREATE TABLE public."__EFMigrationsHistory" (
    "MigrationId" character varying(150) NOT NULL,
    "ProductVersion" character varying(32) NOT NULL
);


ALTER TABLE public."__EFMigrationsHistory" OWNER TO prd_barber_db_user;

--
-- Data for Name: Agendamento; Type: TABLE DATA; Schema: public; Owner: prd_barber_db_user
--

COPY public."Agendamento" ("Id", "ClienteId", "BarbeiroId", "DataHora", "Status", "DataRegistro", "Observacao") FROM stdin;
1	1	1	2025-12-03 13:00:00+00	2	2025-12-03 04:09:02.081089+00	teste
2	1	1	2025-10-03 13:00:00+00	1	2025-12-03 16:01:07.840294+00	
\.


--
-- Data for Name: AgendamentoServicos; Type: TABLE DATA; Schema: public; Owner: prd_barber_db_user
--

COPY public."AgendamentoServicos" ("AgendamentoId", "ServicoId", "Observacao") FROM stdin;
1	1	teste
2	1	\N
\.


--
-- Data for Name: Barbeiro; Type: TABLE DATA; Schema: public; Owner: prd_barber_db_user
--

COPY public."Barbeiro" ("Id", "Nome", "Telefone", "UsuarioId") FROM stdin;
1	Cristian Schmidt	51981695117	1
\.


--
-- Data for Name: Cliente; Type: TABLE DATA; Schema: public; Owner: prd_barber_db_user
--

COPY public."Cliente" ("Id", "Nome", "Cpf", "Telefone", "DataCadastro") FROM stdin;
1	Cristian Rodrigues	85455199072	51981695117	2025-12-03 04:09:02.074165+00
\.


--
-- Data for Name: RefreshTokens; Type: TABLE DATA; Schema: public; Owner: prd_barber_db_user
--

COPY public."RefreshTokens" ("Id", "UsuarioId", "TokenHash", "ExpiraEm", "Revogado", "CriadoEm") FROM stdin;
1	1	A062F5A7C0B94A36B1DC95A846D0B60E49D8A0575DE7AC5D16333E435B34B3F0	2025-12-10 01:53:54.619184+00	t	2025-12-03 01:53:54.619135+00
2	1	261278A11DF04B66D66E4AA4A87B7B2ACBEBCAC97872C70A5D46935F49663DD7	2025-12-10 04:03:51.56723+00	t	2025-12-03 04:03:51.567196+00
3	1	83246C936265B387128D4E4694D5FA167FB94338F7217D0D7F914F798F6114F6	2025-12-10 04:06:14.071394+00	t	2025-12-03 04:06:14.071394+00
4	1	7C40CA084831EA082F8C5CCAFE0981AAA7B097F624BE7F3C54B7716D566ECDBF	2025-12-10 16:00:31.028215+00	f	2025-12-03 16:00:31.02817+00
\.


--
-- Data for Name: Servico; Type: TABLE DATA; Schema: public; Owner: prd_barber_db_user
--

COPY public."Servico" ("Id", "NomeServico", "Preco") FROM stdin;
1	Navalhado	20.00
2	Corte simples	15.00
3	Sobrancelha	10.00
\.


--
-- Data for Name: Usuarios; Type: TABLE DATA; Schema: public; Owner: prd_barber_db_user
--

COPY public."Usuarios" ("Id", "NomeUsuario", "SenhaHash", "NomeCompleto", "Cargo", "Role", "Ativo") FROM stdin;
1	admin	$2b$12$bVSzBmakrQbSqVTnjBmCOOI3MiTz98FBbGiBAeu4owoKojUBoD0cS	Cristian Schmidt	Admin	Administrador	t
\.


--
-- Data for Name: __EFMigrationsHistory; Type: TABLE DATA; Schema: public; Owner: prd_barber_db_user
--

COPY public."__EFMigrationsHistory" ("MigrationId", "ProductVersion") FROM stdin;
20251202221201_InitPostgres	8.0.8
\.


--
-- Name: Agendamento_Id_seq; Type: SEQUENCE SET; Schema: public; Owner: prd_barber_db_user
--

SELECT pg_catalog.setval('public."Agendamento_Id_seq"', 2, true);


--
-- Name: Barbeiro_Id_seq; Type: SEQUENCE SET; Schema: public; Owner: prd_barber_db_user
--

SELECT pg_catalog.setval('public."Barbeiro_Id_seq"', 1, false);


--
-- Name: Cliente_Id_seq; Type: SEQUENCE SET; Schema: public; Owner: prd_barber_db_user
--

SELECT pg_catalog.setval('public."Cliente_Id_seq"', 1, true);


--
-- Name: RefreshTokens_Id_seq; Type: SEQUENCE SET; Schema: public; Owner: prd_barber_db_user
--

SELECT pg_catalog.setval('public."RefreshTokens_Id_seq"', 4, true);


--
-- Name: Servico_Id_seq; Type: SEQUENCE SET; Schema: public; Owner: prd_barber_db_user
--

SELECT pg_catalog.setval('public."Servico_Id_seq"', 1, false);


--
-- Name: Usuarios_Id_seq; Type: SEQUENCE SET; Schema: public; Owner: prd_barber_db_user
--

SELECT pg_catalog.setval('public."Usuarios_Id_seq"', 1, false);


--
-- Name: Agendamento PK_Agendamento; Type: CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."Agendamento"
    ADD CONSTRAINT "PK_Agendamento" PRIMARY KEY ("Id");


--
-- Name: AgendamentoServicos PK_AgendamentoServicos; Type: CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."AgendamentoServicos"
    ADD CONSTRAINT "PK_AgendamentoServicos" PRIMARY KEY ("AgendamentoId", "ServicoId");


--
-- Name: Barbeiro PK_Barbeiro; Type: CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."Barbeiro"
    ADD CONSTRAINT "PK_Barbeiro" PRIMARY KEY ("Id");


--
-- Name: Cliente PK_Cliente; Type: CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."Cliente"
    ADD CONSTRAINT "PK_Cliente" PRIMARY KEY ("Id");


--
-- Name: RefreshTokens PK_RefreshTokens; Type: CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."RefreshTokens"
    ADD CONSTRAINT "PK_RefreshTokens" PRIMARY KEY ("Id");


--
-- Name: Servico PK_Servico; Type: CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."Servico"
    ADD CONSTRAINT "PK_Servico" PRIMARY KEY ("Id");


--
-- Name: Usuarios PK_Usuarios; Type: CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."Usuarios"
    ADD CONSTRAINT "PK_Usuarios" PRIMARY KEY ("Id");


--
-- Name: __EFMigrationsHistory PK___EFMigrationsHistory; Type: CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."__EFMigrationsHistory"
    ADD CONSTRAINT "PK___EFMigrationsHistory" PRIMARY KEY ("MigrationId");


--
-- Name: IX_AgendamentoServicos_ServicoId; Type: INDEX; Schema: public; Owner: prd_barber_db_user
--

CREATE INDEX "IX_AgendamentoServicos_ServicoId" ON public."AgendamentoServicos" USING btree ("ServicoId");


--
-- Name: IX_Agendamento_BarbeiroId; Type: INDEX; Schema: public; Owner: prd_barber_db_user
--

CREATE INDEX "IX_Agendamento_BarbeiroId" ON public."Agendamento" USING btree ("BarbeiroId");


--
-- Name: IX_Agendamento_ClienteId; Type: INDEX; Schema: public; Owner: prd_barber_db_user
--

CREATE INDEX "IX_Agendamento_ClienteId" ON public."Agendamento" USING btree ("ClienteId");


--
-- Name: IX_Barbeiro_UsuarioId; Type: INDEX; Schema: public; Owner: prd_barber_db_user
--

CREATE UNIQUE INDEX "IX_Barbeiro_UsuarioId" ON public."Barbeiro" USING btree ("UsuarioId");


--
-- Name: IX_RefreshTokens_UsuarioId; Type: INDEX; Schema: public; Owner: prd_barber_db_user
--

CREATE INDEX "IX_RefreshTokens_UsuarioId" ON public."RefreshTokens" USING btree ("UsuarioId");


--
-- Name: AgendamentoServicos FK_AgendamentoServicos_Agendamento_AgendamentoId; Type: FK CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."AgendamentoServicos"
    ADD CONSTRAINT "FK_AgendamentoServicos_Agendamento_AgendamentoId" FOREIGN KEY ("AgendamentoId") REFERENCES public."Agendamento"("Id") ON DELETE CASCADE;


--
-- Name: AgendamentoServicos FK_AgendamentoServicos_Servico_ServicoId; Type: FK CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."AgendamentoServicos"
    ADD CONSTRAINT "FK_AgendamentoServicos_Servico_ServicoId" FOREIGN KEY ("ServicoId") REFERENCES public."Servico"("Id") ON DELETE CASCADE;


--
-- Name: Agendamento FK_Agendamento_Barbeiro_BarbeiroId; Type: FK CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."Agendamento"
    ADD CONSTRAINT "FK_Agendamento_Barbeiro_BarbeiroId" FOREIGN KEY ("BarbeiroId") REFERENCES public."Barbeiro"("Id") ON DELETE CASCADE;


--
-- Name: Agendamento FK_Agendamento_Cliente_ClienteId; Type: FK CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."Agendamento"
    ADD CONSTRAINT "FK_Agendamento_Cliente_ClienteId" FOREIGN KEY ("ClienteId") REFERENCES public."Cliente"("Id") ON DELETE CASCADE;


--
-- Name: Barbeiro FK_Barbeiro_Usuarios_UsuarioId; Type: FK CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."Barbeiro"
    ADD CONSTRAINT "FK_Barbeiro_Usuarios_UsuarioId" FOREIGN KEY ("UsuarioId") REFERENCES public."Usuarios"("Id") ON DELETE SET NULL;


--
-- Name: RefreshTokens FK_RefreshTokens_Usuarios_UsuarioId; Type: FK CONSTRAINT; Schema: public; Owner: prd_barber_db_user
--

ALTER TABLE ONLY public."RefreshTokens"
    ADD CONSTRAINT "FK_RefreshTokens_Usuarios_UsuarioId" FOREIGN KEY ("UsuarioId") REFERENCES public."Usuarios"("Id") ON DELETE CASCADE;


--
-- Name: SCHEMA public; Type: ACL; Schema: -; Owner: prd_barber_db_user
--

GRANT USAGE ON SCHEMA public TO barber_api_user;


--
-- Name: TABLE "Agendamento"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT SELECT,INSERT,DELETE,UPDATE ON TABLE public."Agendamento" TO barber_api_user;


--
-- Name: TABLE "AgendamentoServicos"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT SELECT,INSERT,DELETE,UPDATE ON TABLE public."AgendamentoServicos" TO barber_api_user;


--
-- Name: SEQUENCE "Agendamento_Id_seq"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT ALL ON SEQUENCE public."Agendamento_Id_seq" TO barber_api_user;


--
-- Name: TABLE "Barbeiro"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT SELECT,INSERT,DELETE,UPDATE ON TABLE public."Barbeiro" TO barber_api_user;


--
-- Name: SEQUENCE "Barbeiro_Id_seq"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT ALL ON SEQUENCE public."Barbeiro_Id_seq" TO barber_api_user;


--
-- Name: TABLE "Cliente"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT SELECT,INSERT,DELETE,UPDATE ON TABLE public."Cliente" TO barber_api_user;


--
-- Name: SEQUENCE "Cliente_Id_seq"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT ALL ON SEQUENCE public."Cliente_Id_seq" TO barber_api_user;


--
-- Name: TABLE "RefreshTokens"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT SELECT,INSERT,DELETE,UPDATE ON TABLE public."RefreshTokens" TO barber_api_user;


--
-- Name: SEQUENCE "RefreshTokens_Id_seq"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT ALL ON SEQUENCE public."RefreshTokens_Id_seq" TO barber_api_user;


--
-- Name: TABLE "Servico"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT SELECT,INSERT,DELETE,UPDATE ON TABLE public."Servico" TO barber_api_user;


--
-- Name: SEQUENCE "Servico_Id_seq"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT ALL ON SEQUENCE public."Servico_Id_seq" TO barber_api_user;


--
-- Name: TABLE "Usuarios"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT SELECT,INSERT,DELETE,UPDATE ON TABLE public."Usuarios" TO barber_api_user;


--
-- Name: SEQUENCE "Usuarios_Id_seq"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT ALL ON SEQUENCE public."Usuarios_Id_seq" TO barber_api_user;


--
-- Name: TABLE "__EFMigrationsHistory"; Type: ACL; Schema: public; Owner: prd_barber_db_user
--

GRANT SELECT,INSERT,DELETE,UPDATE ON TABLE public."__EFMigrationsHistory" TO barber_api_user;


--
-- Name: DEFAULT PRIVILEGES FOR SEQUENCES; Type: DEFAULT ACL; Schema: public; Owner: prd_barber_db_user
--

ALTER DEFAULT PRIVILEGES FOR ROLE prd_barber_db_user IN SCHEMA public GRANT ALL ON SEQUENCES TO barber_api_user;


--
-- Name: DEFAULT PRIVILEGES FOR TABLES; Type: DEFAULT ACL; Schema: public; Owner: prd_barber_db_user
--

ALTER DEFAULT PRIVILEGES FOR ROLE prd_barber_db_user IN SCHEMA public GRANT SELECT,INSERT,DELETE,UPDATE ON TABLES TO barber_api_user;


--
-- Name: DEFAULT PRIVILEGES FOR SEQUENCES; Type: DEFAULT ACL; Schema: -; Owner: postgres
--

ALTER DEFAULT PRIVILEGES FOR ROLE postgres GRANT ALL ON SEQUENCES TO prd_barber_db_user;


--
-- Name: DEFAULT PRIVILEGES FOR TYPES; Type: DEFAULT ACL; Schema: -; Owner: postgres
--

ALTER DEFAULT PRIVILEGES FOR ROLE postgres GRANT ALL ON TYPES TO prd_barber_db_user;


--
-- Name: DEFAULT PRIVILEGES FOR FUNCTIONS; Type: DEFAULT ACL; Schema: -; Owner: postgres
--

ALTER DEFAULT PRIVILEGES FOR ROLE postgres GRANT ALL ON FUNCTIONS TO prd_barber_db_user;


--
-- Name: DEFAULT PRIVILEGES FOR TABLES; Type: DEFAULT ACL; Schema: -; Owner: postgres
--

ALTER DEFAULT PRIVILEGES FOR ROLE postgres GRANT ALL ON TABLES TO prd_barber_db_user;


--
-- PostgreSQL database dump complete
--

\unrestrict th2gdlSiYf2ADkmFXSXeK3COeaiz3L04aBNzMCOTRdz3fidDHDQV09hle7QXgfx

